# AnalyticStopwatch

./: .gitignore  .pylintrc  README.md  config.py  db.py  frozen_requirements.txt  main.py  manage.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  webpack.config-example.js
clockpuncher/: database.py  main.py  models.py  platform_local_storage.py
clockpuncher/data/: example_project_data.json
clockpuncher/gui/: __init__.py  base_gui.py  dev_gui.py  entry_visualization.py  menu_settings.py  timer.py
clockpuncher/tests/: test_database.py  test_models.py  test_platform_local_storage.py  utils.py
src/: config.py  database.py  db.py  dev_gui.py  gui.py  main.py  models.py
src/gui/: __init__.py  base_gui.py  dev_gui.py  entry_visualization.py  meme.py  timer.py
src/javascript/: clockComponent.js  helperFunctions.js  stopwatchComponent.js  stopwatchReact.js  timerComponent.js
src/static/: main.js
src/templates/: stopwatch.html
src/tests/: test_database.py  test_models.py  utils.py
